2005-01-07  Raphael Langerhorst <raphael-langerhorst@gmx.at>

	Put all KChart classes into the KChart namespace
	* KDChart classes not changed!
	* QtTableView class not changed!

2005-01-06  Raphael Langerhorst <raphael-langerhorst@gmx.at>

	Improve Data Editor usability:
	* sheet.cc: Add tooltips and what's this help.
	* sheet.cc: Use a different color for first row and column
	* sheetdlg.cc: Add tooltips and what's this help.
	* sheetdlg.cc: Change order of widget initialization (better tab order).

2004-11-16  Inge Wallin  <inge@lysator.liu.se>

	Cleanup.
	* kchartDataEditor.{h,cc}: Remove one constructor.
	* table.h (class SheetTable): Reformatting for nicer looking code.

2004-11-05  Inge Wallin  <inge@lysator.liu.se>

	Fix bug 90895: save config is not needed
	* kchart_view.cc (KChartView): Remove actions "loadconfig",
	"saveconfig" and "defaultconfig".
	* kchart.rc: Remove reference to them in the definition of the
	Settings menu.
	
	Fix bug 90904: edit/configure is confusingly named 
	* kchart.rc: Add a sub menu for editing only one aspect of the
	chart.
	* kchart_view.cc: Change shortcut for Edit Data
	* kchart_view.cc: Change string for Configure Chart

2004-10-07  Inge Wallin  <inge@lysator.liu.se>

	* Cleanup of the following files.  Made the code more readable,
	fixed indentation, added some comments:
	- sheet.h
	- sheet.cc

2004-10-06  Inge Wallin  <inge@lysator.liu.se>

	Fix bug 55603: Pressing Enter in Data Editor doesn't update any
	changes.	
	* sheetdlg.cc (SheetDlg): Make the OK button the default.

	* Cleanup of the following files.  Made the code more readable,
	fixed indentation, added some comments:
	- parser.h
	- parser.cc

2004-10-04  Inge Wallin  <inge@lysator.liu.se>

	* Cleaned the following files a little.  Made the code more
	readable, fixed indentation, added (a few) comments:
	(Man, there are a lot of coding styles in there...)
	- kchart_part.h
	- kchart_part.cc
	
	* Cleaned the following files a little.  Made the code more